--- a/help/engl/player_playlist.html
+++ b/help/engl/player_playlist.html
@@ -3,12 +3,17 @@
 <head>
 
 
+
+  
   
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
 
+
   
 
 
+  
+  
   
   <title>Nemp: The playlist</title>
   <style title="" media="" type="text/css">
@@ -29,131 +34,174 @@ font-size: 12px;
 <body>
 
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
 
   <tbody>
 
 
+
     <tr>
+
 
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
 
+
       <td>
       
+      
       <h2 class="head">The playlist</h2>
+
 
 
       </td>
 
 
+
     </tr>
 
 
+
+  
   
   </tbody>
 </table>
 
 
+
 <hr style="width: 100%; height: 2px;"><br>
 
 
-The essence of every player is the playist - the list of the songs that
+
+The essence of every player is the playlist - the list of the songs that
 will be played next.<br>
+
 
 
 <br>
 
 
+
 <span style="font-weight: bold;"><br>
 
 
-Add Files to the playlist<br>
+
+Add files to the playlist<br>
+
 
 
 </span><span style="font-style: italic;">Tip 1: Try
 Drag&amp;Drop<br>
 
 
+
 Tip 2: Try Copy&amp;Paste<br>
+
 
 
 </span><span style="font-weight: bold;"></span><br>
 
 
+
 <span style="font-weight: bold;"><br>
 
 
+
 Webradio</span><br>
+
 
 With Nemp you can listen to many webradio stations. If a station offers a
 .pls file for download, you can open this file with Nemp, and Nemp will
 start the playback.<br>
 
 
+
 <span style="font-style: italic;">Tip 1: Register Nemp as the default player for playlist files to load these files directly from the webbrowser.<br>
+
 
 
 Tip 2: Organize your favorite stations through "Media library -&gt; Manage webradio stations" (Shortcut Ctrl+W).<br>
 
 
+
 </span><br>
 
 
+
 <br>
+
 
 
 <span style="font-weight: bold;">Playback order</span><br>
 
+
 Switch between fouir different modes:<br>
 
 
+
 <br>
+
 
 
 <img src="BtnRandom.png" alt=""><br>
 
 
+
 <ul style="list-style-type: circle;">
+
 
 
   <li>Repeat everything. Nemp will play every title in the playlist and repeat 
 after the last one 
   </li>
+
   <li>Repeat current track: Only the current track is repeated in a loop 
   </li>
+
   <li>Random mode: The tracks in the playlist a played randomly. <span style="font-style: italic;">Note: In the extended playlist settings you can 
 adjust between "really random" (which means that a song can be played twice 
 within a short time) or "Avoid repetitions" (which means if a song was played, 
 it is blocked for some time).</span> 
   </li>
+
   <li>Repeat off: Nemp will play every title in the playlist and stop after the 
 last one.</li>
+
 </ul>
+
 
 
 <span style="font-weight: bold;"><br>
 
 
+
 Modify playback order<br>
+
 
 
 </span><span style="font-style: italic;">Tip 1: Nemp can sort the playlist<br>
 
 
+
 Tip 2: Try Drag&amp;Drop within the playlist<br>
 
 
+
 <br>
+
 
 
 </span>
 <br>
 
 
+
 <span style="font-weight: bold;">Prebook list</span><br>
+
 
 With the numeric keys (0..9) you can set an individual playback order.
 Just select a title in the playlist and hit "1". Nemp will then play
@@ -161,10 +209,13 @@ this title next, regardless of the playback order. To remove a title
 from the prebook list press "0".<br>
 
 
+
 <span style="font-weight: bold;"></span><br>
 
 
+
 <br>
+
 
 
 </body>
