--- a/help/engl/medienbib_pflege.html
+++ b/help/engl/medienbib_pflege.html
@@ -3,12 +3,17 @@
 <head>
 
 
+
+  
   
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
 
+
   
 
 
+  
+  
   
   <title>Maintenance of the media library</title>
   <style title="" media="" type="text/css">
@@ -29,80 +34,106 @@ font-size: 12px;
 <body>
 
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
 
   <tbody>
 
 
+
     <tr>
+
 
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
 
+
       <td>
       
+      
       <h2 class="head">Maintenance of the media library</h2>
+
 
 
       </td>
 
 
+
     </tr>
 
 
+
+  
   
   </tbody>
 </table>
 
 
+
 <hr style="width: 100%; height: 2px;"><br>
+
 
 
 For a correct display and better search results it is necessary, that
 the files are tagged properly.<br>
 
 
+
 <br>
+
 
 
 Nemp 4.6 supports the following types of meta data:<br>
 
 
+
 <ul style="list-style-type: circle;">
+
 
 
   <li>ID3-Tags (Version 1, 1.1, 2.2, 2.3 and 2.4) (used in *.mp3)</li>
 
 
+
   <li>Ogg-Vorbis-Comments (used in *.ogg)</li>
+
 
 
   <li>Flac-Metadata (used in *.flac)</li>
 
 
+
   <li>Apev2-Tags (used in *.ape, *.mpc and some others)</li>
+
 
 
   <li>iTunes Tags (used in *.m4a)</li>
 
 
+
 </ul>
 
 
-If you have many WindowsMediaAudio-files, you probably want to use the
+
+If you have many Windows Media Audio files, you probably want to use the
 Windows Media Player. Nemp can read some data from *.wma files, but
 changing them is not possible.<br>
 
 
+
 <br>
 
 
+
 <br>
+
 
 
 <span style="font-weight: bold;">Changing information<br>
+
 
 
 </span><span style="font-style: italic;">Tip 1:
@@ -110,17 +141,22 @@ Click (slowly) two times on some information&nbsp;in the title list
 of the media library, or use F2 there.<br>
 
 
-Tip 2: Click on some information</span><span style="font-style: italic;"> in teh detailed display next to
+
+Tip 2: Click on some information</span><span style="font-style: italic;"> in the detailed display next to
 the title list.<br>
+
 
 
 </span><br>
 
 
+
 <br>
 
 
+
 <span style="font-weight: bold;">Detailed editing</span><br>
+
 
 
 If you want some more, you can use the "properties" dialog from the
@@ -128,17 +164,22 @@ context menu (right click). There you can edit the ID3-tags directly,
 and change lyrics or cover art.<br>
 
 
+
 <span style="font-style: italic;">Tip: try the shortcut
 Ctrl+D (D as in Details)</span><br>
 
 
+
 <br>
 
 
+
 <br>
+
 
 
 <span style="font-weight: bold;">Lyrics</span><br>
+
 
 
 Nemp can save lyrics to the songs, so you may search for a song which
@@ -149,13 +190,17 @@ http://lyrics.wikia.com/. Just select some files in the title list and
 choose "Get lyrics"<br>
 
 
+
 <br>
 
 
+
 <br>
+
 
 
 <span style="font-weight: bold;">Additional tags<br>
+
 
 
 </span>Nemp can save (almost) arbitrary many additional tags to
@@ -164,37 +209,43 @@ You can set these tags on your own, or use the most common set tags
 from the&nbsp;last.fm community. Detailed information to this topic&nbsp;<a href="nemp_tagcloud.html">here</a>.<span style="font-weight: bold;"><br>
 
 
+
 </span><br>
+
 
 
 <span style="font-weight: bold;"><br>
 
 
+
 Refreshing data</span><br>
+
 
 
 After changing ID3-Tags with other software, you may refresh the
 information in the media library. <br>
 
 
-Select "<span style="font-style: italic;">Refresh selected
-files</span>" or "<span style="font-style: italic;">Refresh
-library</span>" from the menu.<br>
+
+Select "<span style="font-style: italic;">Refresh selected</span>" or "<span style="font-style: italic;">Refresh</span>" from the menu.<br>
+
+
+
+<br>
+
 
 
 <br>
 
-
-<br>
 
 
 <span style="font-weight: bold;">Deleting files</span><br>
 
 
-If you want to exclude some file from your media library,, select
-"<span style="font-style: italic;">Delete selected files
-from the library</span>". The files are just deleted
+
+If you want to exclude some file from your media library,, select "<span style="font-style: italic;">Remove selected files</span>". The files are just removed
 from the library, not from your harddrive.<br>
+
 
 
 </body>
