--- a/help/engl/webradio_verwaltung.html
+++ b/help/engl/webradio_verwaltung.html
@@ -3,12 +3,17 @@
 <head>
 
 
+
+  
   
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
 
+
   
 
 
+  
+  
   
   <title>Manage webradio stations</title>
   <style title="" media="" type="text/css">
@@ -29,44 +34,59 @@ font-size: 12px;
 <body>
 
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
 
   <tbody>
 
 
+
     <tr>
+
 
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
 
+
       <td>
       
+      
       <h2 class="head">Manage webradio stations</h2>
+
 
 
       </td>
 
 
+
     </tr>
 
 
+
+  
   
   </tbody>
 </table>
 
 
+
 <hr style="width: 100%; height: 2px;"><br>
+
 
 
 Nemp can manage your favorite webradio stations.<br>
 
 
+
 <br>
 
 
+
 <span style="font-weight: bold;">Webradio - Favorites</span><br>
+
 
 
 In the classic view of the media library, Nemp will display also your
@@ -74,22 +94,28 @@ favorite webradio stations. You can edit this list through the menu
 "<span style="font-style: italic;">Media library -&gt; Manage webradio stations</span>".<br>
 
 
+
 <br>
+
 
 
 <span style="font-style: italic;">Tip: Many stations offer
-different links for Windows Media Player, Winamp amd Real Player. You
+different links for Windows Media Player, Winamp and Real Player. You
 should use the Winamp link for Nemp.</span><br>
 
 
+
 <br>
+
 
 
 <span style="font-weight: bold;"></span><br>
 
 
+
 <span style="font-weight: bold;">Parse stream
 playlist&nbsp;</span><br>
+
 
 
 Many webradio stations offer you a *.pls file to tune in. In fact, this
@@ -99,15 +125,19 @@ Sometimes all servers will stream the same content, but maybe with a
 different quality setting or encoding.<br>
 
 
+
 Nemp can parse the pls file and add all the servers to the playlist, or
 Nemp can just add the pls file itself to the playlist, and the server
 is choosen automatically.<br>
 
 
+
 <br>
 
 
+
 <br>
+
 
 
 </body>
