--- a/help/engl/webserver.html
+++ b/help/engl/webserver.html
@@ -3,12 +3,17 @@
 <head>
 
 
+
+  
   
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 
+
   
 
 
+  
+  
   
   <title>Nemp Webserver</title>
   <style title="" media="" type="text/css">
@@ -32,35 +37,47 @@ font-size: 12px;
 <body>
 
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
 
   <tbody>
 
 
+
     <tr>
+
 
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
 
+
       <td>
       
+      
       <h2 class="head">The Nemp Webserver</h2>
+
 
 
       </td>
 
 
+
     </tr>
 
 
+
+  
   
   </tbody>
 </table>
 
 
+
 <hr style="width: 100%; height: 2px;"><br>
+
 
 
 The <span style="font-style: italic;">Nemp Webserver</span> allows you to access Nemp through a network by any
@@ -69,19 +86,25 @@ remote control (like "view the next items in the playlist", "add songs to
 the playlist", ...).<br>
 
 
+
 <br>
+
 
 
 <div style="text-align: center;"><img style="width: 378px; height: 376px;" alt="webserver screenshot" src="webserver_screen.jpg"><br>
 
 
+
 </div>
+
 
 
 <br>
 
 
+
 <span style="font-weight: bold;">Activate the webserver</span><br>
+
 
 
 You can activate the webserver through the menu "Tools -&gt; Nemp
@@ -89,7 +112,9 @@ Webserver -&gt; activate". If the Nemp webserver is active, there
 will be an icon <img style="width: 16px; height: 16px;" src="webserver.png" alt=""> in the main window.<br>
 
 
+
 <br>
+
 
 
 <span style="font-style: italic;">Tip: Just try it!
@@ -97,14 +122,18 @@ Activate the webserver, connect your smartphone with your WLAN, and
 enter the IP-address shown in the webserver settings.<br>
 
 
+
 <br>
+
 
 
 </span>According to the selected theme, you may have more or less
 possibilities to control&nbsp;Nemp.<br>
 
 
+
 <ul style="list-style-type: circle;">
+
 
 
   <li>The default theme gives you (and all other users) full
@@ -112,9 +141,11 @@ access to the player, if you didn't forbid some features in the
 settings. This theme requires Javascript in the browser.&nbsp;</li>
 
 
+
   <li>The theme "No Javascript" doesn't use Javascript, but some
 features are missing, like volume control and scrolling within the
 current title.</li>
+
 
 
   <li>The "Party" theme gives you full access only in admin mode
@@ -122,7 +153,9 @@ current title.</li>
 on your party.</li>
 
 
+
 </ul>
+
 
 
 <span style="font-style: italic;">Tip: Get for your party
@@ -131,10 +164,13 @@ local DNS server it is possible to replace the "IP-URL" by a "real one"
 like "http://music.party". Details on my website www.gausi.de. </span><br>
 
 
+
 <span style="font-weight: bold;"></span><br>
 
 
+
 <span style="font-weight: bold;">Access from everywhere</span><br>
+
 
 
 If you want to allow your friends to&nbsp;access Nemp from
@@ -143,35 +179,44 @@ Additionally you probably need to configure your router properly ("port
 forwarding"). <br>
 
 
+
 Your friends need your IP (the "Internet IP", not the local one) and
 (optionally) username and password.<br>
 
 
+
 <br>
+
 
 
 <span style="font-style: italic;"></span><br>
 
 
+
 <br>
+
 
 
 <div style="text-align: center;"><span style="font-weight: bold;">Warning!</span><span style="font-weight: bold;"> <br>
 
 
+
 <br>
+
 
 
 If you allow access from everywhere without setting a password, then
 everybody may have access to your complete music library. By activating
-the Nemp webserver (and doing portforwarding and stuff) you have
+the Nemp webserver (and doing port forwarding and stuff) you have
 effectively created a website, where everybody can download hundreds or
-thousend of music files. Most of them are probably copyrighted, and
+thousends of music files. Most of them are probably copyrighted, and
 this would be a very, very bad idea!</span><br>
+
 
 
 <span style="font-weight: bold;">
 </span><br style="font-weight: bold;">
+
 
 
 <span style="font-weight: bold;">
@@ -179,10 +224,13 @@ this would be a very, very bad idea!</span><br>
 this!</span><br style="font-weight: bold;">
 
 
+
 </div>
 
 
+
 <br>
+
 
 
 </body>
