--- a/help/nemp_start.html
+++ b/help/nemp_start.html
@@ -207,7 +207,7 @@ www.gausi.de, mail@gausi.de<br>
   <li>Schnellerer Start der Wiedergabe (besonders bei Dateien auf Netzwerk-Laufwerken)</li>
 
 
-  <li>Wakman-Modus (Wiedergabe leiert bei schwachem Akku)</li>
+  <li>Walkman-Modus (Wiedergabe leiert bei schwachem Akku)</li>
 
 
 
